<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/finallogo"
    android:backgroundTint="#d3d3d3"
    tools:context=".Dashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SearchView
                android:id="@+id/searchCharities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/searchview_border"
                android:onClick="onSearchCharity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnBooking"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/ic_round_button_light_orange"
                android:fadingEdge="horizontal|vertical"
                android:onClick="onBooking"
                android:text="@string/book"
                android:textAllCaps="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchCharities" />

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/ic_round_button_dark_orange"
                android:fadingEdge="horizontal|vertical"
                android:onClick="viewBookings"
                android:text="@string/view"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnBooking" />

            <Button
                android:id="@+id/btnCalendar"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/ic_round_button_black"
                android:fadingEdge="horizontal|vertical"
                android:onClick="openCalendar"
                android:text="@string/calendar"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnHistory" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name_version"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <!-- Question: when someone books will it be a form or calendar? -->

</androidx.constraintlayout.widget.ConstraintLayout>